fixed responsiveness on small screen

--- a/pages/styles/globals.css
+++ b/pages/styles/globals.css
@@ -167,14 +167,14 @@ width: 100%;
   font-weight: bold;
   margin-left: -20px;
   text-transform: uppercase;
-  margin-top: 30px;
+  margin-top: 20px;
   text-align: justify;
   
 }
 .hero-banner-image{
   position: absolute; 
   top: 0%;
-  right:10%;
+  right:5%;
   width: 450px;
   height: 450px;
   opacity: .45;
@@ -188,11 +188,12 @@ width: 100%;
 
 .desc{
 position: absolute;
-right: 3%;
-bottom: 2%;
+right: 1%;
+bottom: 1%;
 width: 300px;
 line-height: 1.3;
 display: flex;
+
 flex-direction: column;
  color: #324d67;
 
@@ -650,11 +651,12 @@ margin-top: 160px;
     margin-top: 10px;
     height: auto;
   }
+  .hero-banner-container h1{}
   .hero-banner-image{
     width: 77%;
     height: auto;
     top: 0%;
-    right: 10%;
+    right: 5%;
     opacity: .35;
   }
   .footer-banner-container{
@@ -693,19 +695,25 @@ margin-top: 160px;
   }
   .hero-banner-container{
     line-height: 1.3;
+    align-items: center;
   }
   .hero-banner-container h1{
-    font-size: 50px;
+    font-size: 40px;
+    margin: auto;
   }
  .hero-banner-container h3{
-    font-size: 40px;
+    font-size: 35px;
+  }
+  .hero-banner-container .beats-solo{
+    margin-top: 40px;
   }
   .hero-banner-container button{
     margin-top: 50px;
     z-index: 10000;
   }
   .desc{
-   bottom: 60px;
+    padding-top: 20px;
+   bottom: 1%;
    
   }
   .product-detail-container{
